# ws_rodrigo

src/cone_detection_python/cone_detection_python/: camera_sub_node.py  yolov7.py
src/cone_detection_python/cone_detection_python/models/: experimental.py
src/cone_pose_estimator/: CMakeLists.txt
src/cone_pose_estimator/src/: cone_pose_estimator.cpp
src/cone_pose_estimator_python/: package.xml  setup.cfg  setup.py
src/cone_pose_estimator_python/cone_pose_estimator_python/: cone_pose_estimator_node.py
src/custom_parking_planner/: CMakeLists.txt  global_planner_plugin.xml  package.xml
src/custom_parking_planner/include/custom_parking_planner/: custom_parking_planner.hpp
src/custom_parking_planner/python/: parking_path.py
src/custom_parking_planner/src/: custom_parking_planner.cpp  get_vehicle_attr.py  try parking.py
src/gmsie_pointcloud_to_laserscan/: CMakeLists.txt  package.xml
src/gmsie_pointcloud_to_laserscan/launch/: start.launch.yml
src/maneuver_camera/: CMakeLists.txt  package.xml
src/maneuver_camera/include/maneuver_camera/: floor_projection_node.hpp  maneuver_camera_node.hpp
src/maneuver_camera/src/: floor_projection.cpp  floor_projection_node copy.cpp  floor_projection_node.cpp  maneuver_camera.cpp  maneuver_camera_node.cpp
src/nav2_slam/: CMakeLists.txt
src/nav2_slam/bts/: bt_test.cpp  bt_test.xml
src/nav2_slam/config_bak/: mapper_params_online_async.yaml  nav2_params_bak.yaml
src/nav2_slam/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/nav2_slam/install/nav2_slam/share/ament_index/resource_index/parent_prefix_path/: nav2_slam
src/nav2_slam/install/nav2_slam/share/nav2_slam/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/nav2_slam/install/nav2_slam/share/nav2_slam/cmake/: nav2_slamConfig.cmake
src/nav2_slam/install/nav2_slam/share/nav2_slam/config/: nav2_params.yaml
src/nav2_slam/install/nav2_slam/share/nav2_slam/launch/: bringup_launch.py  localization_launch_amcl.py  localization_launch_slam.py  slam_launch.py
src/nav2_slam/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py
src/nav2_slam/launch_bak/: navigation_launch.py  online_async_launch.py  online_sync_launch.py
src/nav2_slam/maps/: town11.yaml
src/nav2_slam/params/: mapper_params_online_async.yaml  nav2_params.yaml
src/nav2_slam/src/: Estacionamento.cpp  NavToPose.xml  NavigateToPose copy.xml  RotinaComSeguranca.xml  RotinaCompleta.xml  RotinaEstacionamento.xml  RotinaEstacionamento3Juntas.xml  RotinaEstacionamentoV2.xml  bt_test.cpp  exemploMonografia.xml  navtopose.xml
src/parallel_parking/: package.xml  setup.cfg  setup.py
src/parallel_parking/bkp/: parking_node (com orientação carla).py  parking_node (cópia).py  parking_node_clean.py  parking_node_gera_rota.py  parking_node_working.py  plot_test.py
src/parallel_parking/parallel_parking/: parking_node.py
src/python_scripts/: package.xml  setup.py
src/python_scripts/scripts/: parking_trigger.py  pisafundo.py
src/sliding_control/: CMakeLists.txt  package.xml
