<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gmsie_pointcloud_to_laserscan</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gmsie@todo.todo">gmsie</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pointcloud_to_laserscan</build_depend>

  <exec_depend>rclcpexec_depend</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>